pagination added to the latest job page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,13 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+body {
+  background-image: url('/icons/bg2.svg'); /* Set the URL of your background image */
+  background-size: cover; /* Adjust the background size as needed */
+  background-repeat: no-repeat; /* Prevent background image repetition */
+}
+
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -35,11 +42,4 @@ body {
 
 
 /* my own css for the webpages  */
-@keyframes marquee {
-  0% { transform: translateX(100%); }
-  100% { transform: translateX(-100%); }
-}
 
-.animate-marquee {
-  animation: marquee 10s linear infinite;
-}
